[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/Godoxel/components/AnimationButton.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.12549 )

[node name="AnimationButton" type="Button"]
margin_right = 250.0
margin_bottom = 42.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextButton" type="Button" parent="."]
anchor_left = 0.14
anchor_top = 0.261905
anchor_right = 0.86
anchor_bottom = 0.738095
margin_top = -9.53674e-07
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Animation"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
anchor_left = 0.108
anchor_top = 0.5
anchor_right = 0.892
anchor_bottom = 0.5
margin_left = -0.0559998
margin_top = -12.0
margin_right = 0.0559998
margin_bottom = 12.0
mouse_filter = 2
text = "Animation"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="." to="." method="_on_AnimationButton_pressed"]
[connection signal="gui_input" from="TextButton" to="." method="_on_TextButton_gui_input"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="visibility_changed" from="LineEdit" to="." method="_on_LineEdit_visibility_changed"]
